--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .game-heading {
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 .game-heading,
@@ -14,5 +14,40 @@
   flex-direction: row;
   justify-content: space-evenly;
   gap: 2rem;
-  margin: 1rem;
+ 
 }
+
+.game-grid {
+  display: grid;
+  margin: 5rem;
+  gap: 4rem;
+  padding: 1rem;
+  grid-template-columns: 220px 220px 220px 220px 220px;
+  grid-template-rows: 180px 180px;
+
+}
+
+
+.cat-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 0 0 4px black, 8px 8px 0 0 black;
+ 
+ 
+
+}
+.cat-image {
+  transition: all ease-in-out 650ms;
+  width: 90%;
+  height: 90%;
+}
+
+.cat-image:hover {
+  width: 100%;
+  height: 100%;
+
+}
+
