feat: add a dialog box for game over condition

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .game-heading {
+  font-family: "Coffee-extra", "Courier New", Courier, monospace;
   font-weight: 500;
   font-size: 2.5rem;
 }
@@ -14,7 +15,10 @@
   flex-direction: row;
   justify-content: space-evenly;
   gap: 2rem;
- 
+}
+
+.score {
+  font-weight: 600;
 }
 
 .game-grid {
@@ -24,9 +28,7 @@
   padding: 1rem;
   grid-template-columns: 220px 220px 220px 220px 220px;
   grid-template-rows: 180px 180px;
-
 }
-
 
 .cat-card {
   display: flex;
@@ -34,10 +36,9 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 0 0 0 4px black, 8px 8px 0 0 black;
- 
- 
-
+  box-shadow:
+    0 0 0 4px black,
+    8px 8px 0 0 black;
 }
 .cat-image {
   transition: all ease-in-out 650ms;
@@ -48,6 +49,23 @@
 .cat-image:hover {
   width: 100%;
   height: 100%;
-
 }
 
+.gameover-dialog {
+  visibility: hidden;
+  font-size: 0.8rem;
+  position: fixed;
+  background-color: white;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 40%;
+  height: 15%;
+  border: 2px solid black;
+  padding: 1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
