--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@
     0 0 0 4px black,
     8px 8px 0 0 black;
 }
+
 .cat-image {
   transition: all ease-in-out 650ms;
   width: 90%;
@@ -52,20 +53,74 @@
 }
 
 .gameover-dialog {
-  visibility: hidden;
-  font-size: 0.8rem;
+
+  font-size: 0.9rem;
   position: fixed;
-  background-color: white;
-  color: black;
+  background-color: darkblue;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 40%;
+  width: 35%;
   height: 15%;
   border: 2px solid black;
   padding: 1rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
+}
+
+.new-game {
+  padding: 0.5rem;
+  background-color: #3d5786;
+  color: white;
+}
+
+
+
+/* media queries */
+
+@media (max-width: 600px) {
+
+  .game-grid {
+    display: grid;
+    gap: 2rem;
+    padding: 1rem;
+    grid-template-columns: 150px 150px;
+    grid-template-rows: 100px 100px 100px 100px 100px;
+  }
+
+  .game-rule {
+    font-size: 0.8rem;
+  }
+  .gameover-dialog {
+  font-size: 0.6em;
+  position: fixed;
+  background-color: darkblue;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 55%;
+  height: 11%;
+  border: 2px solid black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
+}
+
+
+.new-game {
+  width: 50%;
+  height: 40%;
+  font-size: 0.5rem;
+  background-color: #3d5786;
+  color: white;
+}
+
+
 }
