fix: font directory

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Coffee-extra";
-  src: url("./public/font/Coffee-extra.otf");
+  src: url("../public/font/Coffee-extra.otf");
 }
 
 * {
