feat: change the theme to black colour

--- a/src/index.css
+++ b/src/index.css
@@ -8,16 +8,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
 }
 
 body {
-  background: #6190e8;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #a7bfe8, #6190e8);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #a7bfe8, #6190e8);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background-color: rgb(35, 34, 34);
   display: flex;
   flex-direction: row;
   justify-content: center;
