--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@
   align-items: center;
   cursor: pointer;
   box-shadow:
-    0 0 0 4px black,
-    8px 8px 0 0 black;
+    0 0 0 4px white,
+    8px 8px 0 0 white;
 }
 
 .cat-image {
@@ -55,7 +55,7 @@
 .gameover-dialog {
   font-size: 0.9rem;
   position: fixed;
-  background-color: darkblue;
+  background-color: black;
   color: white;
   display: flex;
   flex-direction: column;
@@ -63,7 +63,7 @@
   justify-content: space-between;
   width: 35%;
   height: 15%;
-  border: 2px solid black;
+  border: 2px solid white;
   padding: 1rem;
   top: 50%;
   left: 50%;
@@ -79,8 +79,8 @@
 
 .new-game {
   padding: 0.5rem;
-  background-color: #3d5786;
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 /* media queries */
@@ -107,7 +107,7 @@
   .gameover-dialog {
     font-size: 0.8em;
     position: fixed;
-    background-color: darkblue;
+    background-color: black;
     color: white;
     display: flex;
     flex-direction: column;
@@ -115,19 +115,20 @@
     justify-content: space-between;
     width: 55%;
     height: 16%;
-    border: 2px solid black;
+    border: 2px solid white;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 0 10px 500vw rgba(0, 0, 0, 0.6);
+
   }
 
   .new-game {
     width: 50%;
     height: 40%;
     font-size: 0.5rem;
-    background-color: #3d5786;
-    color: white;
+    background-color: white;
+    color: black;
   }
 
 }
