--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 }
 
 .cat-card {
+  transition: 500ms;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -41,16 +42,19 @@
     8px 8px 0 0 darkgray;
 }
 
-.cat-image {
-  transition: all ease-in-out 650ms;
-  width: 90%;
-  height: 90%;
+.cat-card:hover {
+  box-shadow:
+    0 0 0 4px white,
+    8px 8px 0 0 white;
 }
 
-.cat-image:hover {
+.cat-image {
+  transition: all ease-in-out 650ms;
   width: 100%;
   height: 100%;
 }
+
+
 
 .gameover-dialog {
   font-size: 0.9rem;
@@ -78,6 +82,7 @@
 }
 
 .new-game {
+  cursor: pointer;
   padding: 0.5rem;
   background-color: white;
   color: black;
